cmake_minimum_required(VERSION 3.24)
project(leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(roman_to_int roman_to_int.cpp)
add_executable(longest_common_prefix longest_common_prefix.cpp)
add_executable(valid_parentheses valid_parentheses.cpp)
add_executable(add_two_numbers add_two_numbers.cpp include/list_helper.h)
add_executable(length_of_longest_substring length_of_longest_substring.cpp)
add_executable(longest_palindromic_substring longest_palindromic_substring.cpp)
add_executable(merge_two_lists merge_two_lists.cpp include/list_helper.h)
add_executable(zigzag_conversion zigzag_conversion.cpp)
add_executable(three_sum three_sum.cpp)
