cmake_minimum_required(VERSION 3.16)
project(leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(roman_to_int easy/roman_to_int.cpp)
add_executable(longest_common_prefix easy/longest_common_prefix.cpp)
add_executable(valid_parentheses easy/valid_parentheses.cpp)
add_executable(add_two_numbers medium/add_two_numbers.cpp include/list_helper.h)
add_executable(length_of_longest_substring medium/length_of_longest_substring.cpp)
add_executable(longest_palindromic_substring medium/longest_palindromic_substring.cpp)
add_executable(merge_two_lists easy/merge_two_lists.cpp include/list_helper.h)
add_executable(zigzag_conversion medium/zigzag_conversion.cpp)
add_executable(three_sum medium/three_sum.cpp)
add_executable(container_with_most_water medium/container_with_most_water.cpp)
add_executable(three_sum_closest medium/three_sum_closest.cpp)
add_executable(letter_combination_phone_number medium/letter_combination_phone_number.cpp)
add_executable(buy_stock easy/buy_stock.cpp)