cmake_minimum_required(VERSION 3.16)
project(leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(roman_to_int easy/roman_to_int.cpp)
add_executable(longest_common_prefix easy/longest_common_prefix.cpp)
add_executable(valid_parentheses easy/valid_parentheses.cpp)
add_executable(add_two_numbers medium/add_two_numbers.cpp include/list_helper.h)
add_executable(length_of_longest_substring medium/length_of_longest_substring.cpp)
add_executable(longest_palindromic_substring medium/longest_palindromic_substring.cpp)
add_executable(merge_two_lists easy/merge_two_lists.cpp include/list_helper.h)
add_executable(zigzag_conversion medium/zigzag_conversion.cpp)
add_executable(three_sum medium/three_sum.cpp)
add_executable(container_with_most_water medium/container_with_most_water.cpp)
add_executable(three_sum_closest medium/three_sum_closest.cpp)
add_executable(letter_combination_phone_number medium/letter_combination_phone_number.cpp)
add_executable(buy_stock easy/buy_stock.cpp)
add_executable(contains_duplicate easy/contains_duplicate.cpp)
add_executable(product_of_array_except_self medium/product_of_array_except_self.cpp)
add_executable(maximum_subarray medium/maximum_subarray.cpp)
add_executable(maximum_product_subarray medium/maximum_product_subarray.cpp)
add_executable(find_min_rotated_sorted_array medium/find_min_rotated_sorted_array.cpp)
add_executable(search_rotated_sorted_array medium/search_rotated_sorted_array.cpp)
add_executable(sum_of_two_numbers medium/sum_of_two_numbers.cpp)
add_executable(number_of_1_bits easy/number_of_1_bits.cpp)
add_executable(counting_bits easy/counting_bits.cpp)
add_executable(missing_number easy/missing_number.cpp)
add_executable(reverse_bits easy/reverse_bits.cpp)
add_executable(climbing_stairs easy/climbing_stairs.cpp)
add_executable(counting_coins medium/counting_coins.cpp)
add_executable(pascals_triangle easy/pascals_triangle.cpp)
add_executable(pascals_triangle_ii easy/pascals_triangle_ii.cpp)
add_executable(is_subsequence easy/is_subsequence.cpp)
add_executable(min_cost_climbing_stairs easy/min_cost_climbing_stairs.cpp)
add_executable(valid_anagram easy/valid_anagram.cpp)
add_executable(group_anagrams medium/group_anagrams.cpp)
add_executable(top_k_frequent_element medium/top_k_frequent_element.cpp)
add_executable(valid_sudoku medium/valid_sudoku.cpp)
add_executable(longest_consecutive_sequence medium/longest_consecutive_sequence.cpp)
add_executable(valid_palindrome easy/valid_palindrome.cpp)
add_executable(two_sum_sorted_input medium/two_sum_sorted_input.cpp)
add_executable(trapping_rain_water hard/trapping_rain_water.cpp)
add_executable(longest_repeating_char_replacement medium/longest_repeating_char_replacement.cpp)
add_executable(house_robber medium/house_robber.cpp)